--- a/hu_aix_61_cmd.adoc
+++ b/hu_aix_61_cmd.adoc
@@ -14,7 +14,7 @@ summary: You can use the AIX Host Utilities sample command reference for an end-
 
 [.lead]
 
-You can use the AIX Host Utilities sample command reference for an end-to-end validation of a NetApp storage configuration using the Host Utilities tool.
+You can use the AIX Host Utilities sample command reference for an end-to-end validation of the NetApp storage configuration using the Host Utilities tool.
 
 == List all host initiators mapped to host
 
