--- a/overview.adoc
+++ b/overview.adoc
@@ -19,7 +19,7 @@ You should configure SAN hosts to use the NetApp SAN Host Utilities. SAN host ut
 
 NetApp recommends using the SAN Host Utilities software if it is available for your SAN host.  
 
-If your SAN configuration supports SAN booting, you can also configure your host to use SAN booting for simplified deployment and improved scalability. Using SAN boot, you can deploy multiple new servers by connecting them to SAN and configuring the appropriate boot settings. This saves time by eliminating the need to install the operating system on each server individually. 
+If your SAN configuration supports SAN booting, you can also configure your host for SAN booting to simplify deployment and improve scalability. Using SAN boot, you can deploy multiple new servers by connecting them to SAN and configuring the appropriate boot settings. This saves time by eliminating the need to install the operating system on each server individually. 
   
 Your SAN hosts and ONTAP storage can reside either on-premises, in the cloud, or both.
 
