Add a space before "MB"

--- a/hu-aix-70.adoc
+++ b/hu-aix-70.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu-aix-70.html
 keywords: host utilities, aix, powervm, vios, 3.1, 7.0, netapp, ontap
-summary: The AIX Host Utilities assists you to manage NetApp ONTAP storage attached to an AIX host.
+summary: The AIX Host Utilities assists you to manage ONTAP storage attached to an AIX host.
 ---
 = Install AIX Host Utilities 7.0
 :hardbreaks:
