--- a/hu_aix_61.adoc
+++ b/hu_aix_61.adoc
@@ -37,7 +37,7 @@ You can use the https://mysupport.netapp.com/matrix/imt.jsp?components=65623%3B6
 * Dynamic tracking must be enabled for all FC and FCoE initiators.
 
 [NOTE]
-The AIX Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/6.1/downloads[NetApp Support Site^] in a compressed tar.gz file. You must install the AIX Host Utilities kit while using AIX MPIO with NetApp ONTAP Storage.
+The AIX Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/6.1/downloads[NetApp Support Site^] in a compressed tar.gz file. You must install the AIX Host Utilities kit while using AIX MPIO with ONTAP Storage.
 
 .Steps
 
