--- a/hu_hpux_60.adoc
+++ b/hu_hpux_60.adoc
@@ -32,7 +32,7 @@ You can use the link:https://mysupport.netapp.com/matrix/imt.jsp?components=7110
 
 .About this task
 
-The HP-UX Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/6.0/downloads[NetApp Support Site^] in a compressed file. After you download the file, you must decompress it before installation.
+The NetApp HP-UX Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/6.0/downloads[NetApp Support Site^] in a compressed file. After you download the file, you must decompress it before installation.
 
 .Steps
 
