--- a/hu_luhu_71.adoc
+++ b/hu_luhu_71.adoc
@@ -25,7 +25,7 @@ The following Linux distributions are supported:
 
 .Before you begin
 
-The Linux Unified Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.1/downloads[NetApp Support Site^] in a 32-bit or 64-bit .rpm file. 
+The NetApp Linux Unified Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.1/downloads[NetApp Support Site^] in a 32-bit or 64-bit .rpm file. 
 
 * For reliable operation, you must verify that your entire iSCSI, FC, or FCoE configuration is supported.
 +
