--- a/hu_solaris_62.adoc
+++ b/hu_solaris_62.adoc
@@ -13,7 +13,7 @@ summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-The NetApp Solaris Host Utilities assists you in managing ONTAP storage attached to a Solaris host.
+The Solaris Host Utilities assists you in managing ONTAP storage attached to a Solaris host.
 
 The Solaris Host Utilities 6.2 supports several Solaris environments and multiple protocols. The primary Host Utilities environments are: 
 
@@ -33,7 +33,7 @@ You can use the link:https://mysupport.netapp.com/matrix/imt.jsp?components=7110
 
 
 [NOTE]
-The Solaris Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/6.2/downloads[NetApp Support Site^] in a compressed  file format for your processor. You can download the Host Utilities software package for your environment from the Support site.
+The NetApp Solaris Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/6.2/downloads[NetApp Support Site^] in a compressed  file format for your processor. You can download the Host Utilities software package for your environment from the Support site.
 
 .Steps
 
