--- a/nvme_ol_81.adoc
+++ b/nvme_ol_81.adoc
@@ -27,7 +27,7 @@ include::_include/hu/reuse_hu_cloud_note.adoc[]
 
 * By default, round-robin load balancing is not enabled in NVMe Multipath. You must write a udev rule to enable this functionality. Steps are provided in the section on Enabling NVMe/FC on Oracle Linux 8.1.
 
-* There is no sanlun support for NVMe/FC and, as a consequence, no Linux Unified Host Utilities (LUHU) support for NVMe/FC on Oracle Linux 8.1. Use the ONTAP command output available as part of the NetApp plug-in included in the native nvme-cli.
+* There is no sanlun support for NVMe/FC and, as a consequence, no Linux Unified Host Utilities support for NVMe/FC on Oracle Linux 8.1. Use the ONTAP command output available as part of the NetApp plug-in included in the native nvme-cli.
 
 * SAN booting using the NVMe-oF protocol is currently not supported.
 
