--- a/hu-aix-70.adoc
+++ b/hu-aix-70.adoc
@@ -13,7 +13,7 @@ summary: The AIX Host Utilities assists you to manage ONTAP storage attached to 
 :imagesdir: ./media/
 
 [.lead]
-The NeApp AIX Host Utilities assists you to manage ONTAP storage attached to an AIX host.
+The AIX Host Utilities assists you to manage ONTAP storage attached to an AIX host.
 
 AIX Host Utilities support the following protocols:
 
@@ -37,7 +37,7 @@ You can use the https://mysupport.netapp.com/matrix/imt.jsp?components=65623%3B6
 * Dynamic tracking must be enabled for all FC and FCoE initiators.
 
 [NOTE]
-The AIX Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.0[NetApp Support Site^] in a compressed tar.gz file. You must install the AIX Host Utilities kit while using AIX MPIO with ONTAP Storage.
+The NetApp AIX Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.0[NetApp Support Site^] in a compressed tar.gz file. You must install the AIX Host Utilities kit while using AIX MPIO with ONTAP Storage.
 
 .Steps
 
