--- a/hu_ol_85.adoc
+++ b/hu_ol_85.adoc
@@ -123,11 +123,11 @@ devices {
 }
 ----
 
-NOTE: To configure Oracle Linux 8.5 Red Hat Enterprise Kernel (RHCK), use the link:hu_rhel_85.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 8.5.
+NOTE: To configure Oracle Linux 8.5 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_85.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 8.5.
 
-== KVM Settings
+== KVM settings
 
-You can use the recommended settings to configure Kernel-based Virtual Machine (KVM) as well. There are no changes required to configure KVM as the LUN is mapped to the hypervisor.
+You don't need to configure settings for a Kernel-based Virtual Machine on Oracle Linux 8.5 because the LUN is mapped to the hypervisor.
 
 == Known issues
 
