--- a/hu_ol_88.adoc
+++ b/hu_ol_88.adoc
@@ -138,11 +138,11 @@ devices {
 }
 ----
 
-NOTE: To configure Oracle Linux 8.8 Red Hat Enterprise Kernel, use the link:hu_rhel_88.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 8.8.
+NOTE: To configure Oracle Linux 8.8 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_88.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 8.8.
 
 == KVM settings
 
-You can also use the recommended settings to configure a Kernel-based Virtual Machine (KVM). There are no changes required to configure a KVM as the LUN is mapped to the hypervisor.
+You don't need to configure settings for a Kernel-based Virtual Machine on Oracle Linux 8.8 because the LUN is mapped to the hypervisor.
 
 == Known issues
 
