--- a/hu_ol_87.adoc
+++ b/hu_ol_87.adoc
@@ -141,11 +141,11 @@ devices {
 ----
 
 [NOTE] 
-To configure Oracle Linux 8.7 Red Hat Enterprise Kernel (RHCK), use the link:hu_rhel_87.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 8.7.
+To configure Oracle Linux 8.7 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_87.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 8.7.
 
 == KVM settings
 
-You can also use the recommended settings to configure the Kernel-based Virtual Machine (KVM). There are no changes required to configure the KVM as the LUN is mapped to the hypervisor.
+You don't need to configure settings for a Kernel-based Virtual Machine on Oracle Linux 8.7 because the LUN is mapped to the hypervisor.
 
 == Known issues
 
