--- a/hu_ol_89.adoc
+++ b/hu_ol_89.adoc
@@ -137,11 +137,11 @@ devices {
 }
 ----
 
-NOTE: To configure Oracle Linux 8.9 RedHat Enterprise Kernel, use the link:hu_rhel_89.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 8.9.
+NOTE: To configure Oracle Linux 8.9 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_89.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 8.9.
 
 == KVM settings
 
-You can also use the recommended settings to configure a Kernel-based Virtual Machine (KVM). There are no changes required to configure a KVM as the LUN is mapped to the hypervisor.
+You don't need to configure settings for a Kernel-based Virtual Machine on Oracle Linux 8.9 because the LUN is mapped to the hypervisor.
 
 == Known issues
 
