--- a/hu_ol_90.adoc
+++ b/hu_ol_90.adoc
@@ -136,11 +136,11 @@ devices {
 }
 ----
 
-NOTE: To configure Oracle Linux 9.0 Red Hat Enterprise Kernel (RHCK), use the link:hu_rhel_86.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 9.0.
+NOTE: To configure Oracle Linux 9.0 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_86.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 9.0.
 
 == KVM settings
 
-You can also use the recommended settings to configure Kernel-based Virtual Machine (KVM). There are no changes required to configure KVM as the LUN is mapped to the hypervisor.
+You don't need to configure settings for a Kernel-based Virtual Machine on Oracle Linux 9.0 because the LUN is mapped to the hypervisor.
 
 == Known issues
 
