--- a/hu_ol_94.adoc
+++ b/hu_ol_94.adoc
@@ -150,11 +150,12 @@ devices {
 ----
 ====
 
-NOTE: To configure Oracle Linux 9.4 Red Hat Enterprise Kernel (RHEK), use the link:hu_rhel_94.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 9.4.
+NOTE: To configure Oracle Linux 9.4 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_94.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 9.4.
 
-=== Configure KVM settings
+== KVM settings
 
-You can also use the recommended settings to configure Kernel-based Virtual Machine (KVM). There are no changes required to configure KVM as the LUN is mapped to the hypervisor.
+
+You don't need to configure settings for a Kernel-based Virtual Machine on Oracle Linux 9.4 because the LUN is mapped to the hypervisor.
 
 == Known issues
 
