--- a/hu_ol_89.adoc
+++ b/hu_ol_89.adoc
@@ -139,9 +139,7 @@ devices {
 
 NOTE: To configure Oracle Linux 8.9 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_89.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 8.9.
 
-== KVM settings
-
-You don't need to configure settings for a Kernel-based Virtual Machine on Oracle Linux 8.9 because the LUN is mapped to the hypervisor.
+include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
