--- a/hu_ol_91.adoc
+++ b/hu_ol_91.adoc
@@ -139,9 +139,7 @@ devices {
 
 NOTE: To configure Oracle Linux 9.1 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_91.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 9.1.
 
-== KVM settings
-
-You don't need to configure settings for a Kernel-based Virtual Machine on Oracle Linux 9.1 because the LUN is mapped to the hypervisor.
+include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
