--- a/hu_ol_94.adoc
+++ b/hu_ol_94.adoc
@@ -152,10 +152,7 @@ devices {
 
 NOTE: To configure Oracle Linux 9.4 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_94.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 9.4.
 
-== KVM settings
-
-
-You don't need to configure settings for a Kernel-based Virtual Machine on Oracle Linux 9.4 because the LUN is mapped to the hypervisor.
+include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
