--- a/hu_ubuntu_2404.adoc
+++ b/hu_ubuntu_2404.adoc
@@ -115,9 +115,7 @@ devices {
 }
 ----
 
-=== KVM settings
-
-You don't need to configure settings for a Kernel-based Virtual Machine on Ubuntu 24.04 because the LUN is mapped to the hypervisor.
+include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known issues
 
