updated the RHCK and RHEL note references

--- a/hu_ol_64.adoc
+++ b/hu_ol_64.adoc
@@ -106,7 +106,7 @@ devices {
 }
 ----
 
-NOTE: To configure Oracle Linux 6.4 Red Hat Enterprise Kernel (RHCK), use the link:hu_rhel_64.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 6.4.
+NOTE: To configure Oracle Linux 6.4 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_64.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 6.4.
 
 == Known issues
 
@@ -177,6 +177,6 @@ This issue is seen with following version:
 
 |===
 
-NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_64.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 6.4.
+NOTE: For Oracle Linux RHCK known issues, see the link:hu_rhel_64.html#known-problems-and-limitations[known issues] for RHEL 6.4.
 
 // 2024 SEP 2, ONTAPDOC-2345
