--- a/hu_ol_65.adoc
+++ b/hu_ol_65.adoc
@@ -106,11 +106,11 @@ devices {
 }
 ----
 
-NOTE: To configure Oracle Linux 6.5 Red Hat Enterprise Kernel (RHCK), use the link:hu_rhel_65.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 6.5.
+NOTE: To configure Oracle Linux 6.5 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_65.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 6.5.
 
 == Known issues
 
 There are no known issues for the Oracle Linux 6.5 with ONTAP release.
 
-NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_65.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 6.5.
+NOTE: For Oracle Linux RHCK known issues, see the link:hu_rhel_65.html#known-problems-and-limitations[known issues] for RHEL 6.5.
 
