--- a/hu_ol_69.adoc
+++ b/hu_ol_69.adoc
@@ -107,7 +107,7 @@ devices {
 }
 ----
 
-NOTE: To configure Oracle Linux 6.9 Red Hat Enterprise Kernel (RHCK), use the link:hu_rhel_69.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 6.9.
+NOTE: To configure Oracle Linux 6.9 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_69.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 6.9.
 
 == Known issues
 
@@ -122,6 +122,6 @@ The Oracle Linux 6.9 with ONTAP release has the following known issues:
  qla2xxx [0000:0c:00.3]-d001:3: Firmware dump saved to temp buffer (3/ffffc90008901000), dump status flags (0x3f).
 |===
 
-NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_69.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 6.9.
+NOTE: For Oracle Linux RHCK known issues, see the link:hu_rhel_69.html#known-problems-and-limitations[known issues] for RHEL 6.9.
 
 // 2024 SEP 2, ONTAPDOC-2345
