--- a/hu_ol_70.adoc
+++ b/hu_ol_70.adoc
@@ -116,7 +116,7 @@ devices {
 }
 ----
 
-NOTE: To configure Oracle Linux 7.0 Red Hat Enterprise Kernel (RHCK), use the link:hu_rhel_70.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.0.
+NOTE: To configure Oracle Linux 7.0 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_70.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.0.
 
 == Known issues
 
