--- a/hu_ol_82.adoc
+++ b/hu_ol_82.adoc
@@ -119,12 +119,12 @@ devices {
 }
 ----
 
-NOTE: To configure Oracle Linux 8.2 Red Hat Enterprise Kernel (RHCK), use the link:hu_rhel_82.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 8.2.
+NOTE: To configure Oracle Linux 8.2 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_82.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 8.2.
 
 == Known issues
 
 There are no known issues for the Oracle Linux 8.2 with ONTAP release.
 
-NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_82.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 8.2.
+NOTE: For Oracle Linux RHCK known issues, see the link:hu_rhel_82.html#known-problems-and-limitations[known issues] for RHEL 8.2.
 
 // BURT-1579262 22 Aug 2023
