--- a/hu_ol_84.adoc
+++ b/hu_ol_84.adoc
@@ -131,4 +131,4 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 There are no known issues for the Oracle Linux 8.4 with ONTAP release.
 
-NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_84.html#known-problems-and-limitations[known issues] section in the corresponding Red Hat Enterprise Linux release documentation.
+NOTE: For Oracle Linux RHCK known issues, see the link:hu_rhel_84.html#known-problems-and-limitations[known issues] section in the corresponding RHEL release documentation.
