--- a/hu_ol_610.adoc
+++ b/hu_ol_610.adoc
@@ -104,11 +104,11 @@ devices {
 }
 ----
 
-NOTE: To configure Oracle Linux 6.10 Red Hat Enterprise Kernel (RHCK), use the link:hu_rhel_610.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 6.10.
+NOTE: To configure Oracle Linux 6.10 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_610.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 6.10.
 
 == Known issues
 
 There are no known issues for the Oracle Linux 6.10 with ONTAP release.
 
-NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_610.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 6.10.
+NOTE: For Oracle Linux RHCK known issues, see the link:hu_rhel_610.html#known-problems-and-limitations[known issues] for RHEL 6.10.
 
