--- a/hu_ol_71.adoc
+++ b/hu_ol_71.adoc
@@ -125,7 +125,7 @@ devices {
 }
 ----
 
-NOTE: To configure Oracle Linux 7.1 Red Hat Enterprise Kernel (RHCK), use the link:hu_rhel_71.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.1.
+NOTE: To configure Oracle Linux 7.1 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_71.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.1.
 
 == Known issues
 
