--- a/hu_ol_72.adoc
+++ b/hu_ol_72.adoc
@@ -125,7 +125,7 @@ devices {
 }
 ----
 
-NOTE: To configure Oracle Linux 7.2 Red Hat Enterprise Kernel (RHCK), use the link:hu_rhel_72.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.2.
+NOTE: To configure Oracle Linux 7.2 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_72.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.2.
 
 == Known issues
 
