--- a/hu_ol_75.adoc
+++ b/hu_ol_75.adoc
@@ -103,7 +103,7 @@ devices {
 }
 ----
 
-NOTE: To configure Oracle Linux 7.5 Red Hat Enterprise Kernel (RHCK), use the link:hu_rhel_75.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.5.
+NOTE: To configure Oracle Linux 7.5 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_75.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.5.
 
 == Known issues
 
