--- a/hu_ol_76.adoc
+++ b/hu_ol_76.adoc
@@ -102,7 +102,7 @@ devices {
 }
 ----
 
-NOTE: To configure Oracle Linux 7.6 Red Hat Enterprise Kernel (RHCK), use the link:hu_rhel_76.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.6.
+NOTE: To configure Oracle Linux 7.6 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_76.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.6.
 
 == Known issues
 
