--- a/hu_ol_78.adoc
+++ b/hu_ol_78.adoc
@@ -106,7 +106,7 @@ devices {
 }
 ----
 
-NOTE: To configure Oracle Linux 7.8 Red Hat Enterprise Kernel (RHCK), use the link:hu_rhel_78.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.8.
+NOTE: To configure Oracle Linux 7.8 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_78.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.8.
 
 == Known issues
 
