--- a/hu_ol_79.adoc
+++ b/hu_ol_79.adoc
@@ -119,7 +119,7 @@ devices {
 }
 ----
 
-NOTE: To configure Oracle Linux 7.9 Red Hat Enterprise Kernel (RHCK), use the link:hu_rhel_79.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.9.
+NOTE: To configure Oracle Linux 7.9 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_79.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.9.
 
 == Known issues
 
