--- a/hu_ol_80.adoc
+++ b/hu_ol_80.adoc
@@ -104,11 +104,11 @@ devices {
 }
 ----
 
-NOTE: To configure Oracle Linux 8.0 Red Hat Enterprise Kernel (RHCK), use the link:hu_rhel_80.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 8.0.
+NOTE: To configure Oracle Linux 8.0 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_80.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 8.0.
 
 == Known issues
 
 There are no known issues for the Oracle Linux 8.0 with ONTAP release.
 
-NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_80.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 8.0.
+NOTE: For Oracle Linux RHCK known issues, see the link:hu_rhel_80.html#known-problems-and-limitations[known issues] for RHEL 8.0.
 
