--- a/hu_ol_83.adoc
+++ b/hu_ol_83.adoc
@@ -123,10 +123,10 @@ devices {
 }
 ----
 
-NOTE: To configure Oracle Linux 8.3 Red Hat Enterprise Kernel (RHCK), use the link:hu_rhel_83.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 8.3.
+NOTE: To configure Oracle Linux 8.3 Red Hat Compatible Kernel (RHCK), use the link:hu_rhel_83.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 8.3.
 
 == Known issues
 
 There are no known issues for the Oracle Linux 8.3 with ONTAP release.
 
-NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_83.html#known-problems-and-limitations[known issues] section in the corresponding Red Hat Enterprise Linux release documentation.
+NOTE: For Oracle Linux RHCK known issues, see the link:hu_rhel_83.html#known-problems-and-limitations[known issues] section in the corresponding RHEL release documentation.
